# factory-in-a-box

./: .gitignore  Dockerfile  README.md  build.gradle  config.gradle  entrypoint.sh  settings.gradle
4Diac/ColorTest/: ColorTest_FORTE_PC.fboot
FIAB4diacPlotter/: forte.fboot
FIABHardware/: .gitignore  build.gradle  pom.xml
FIABconveyor/: build.gradle
FIABcore/: build.gradle  pom.xml
FIABfoldingstation/: VirtualFoldingStationwiringinfo.json  build.gradle  pom.xml
FIABfunctionalunit/: README.md  build.gradle
FIABhal/: README.md  build.gradle
FIABhandshake/: build.gradle  pom.xml
FIABiostation/: build.gradle  pom.xml
FIABlayoutagent/: build.gradle
FIABopcuabase/: .gitignore  README.md  build.gradle  dependency-reduced-pom.xml  pom.xml
FIABproductioncell/: .gitignore  LocalFoldingProductionCell.json  Turntable1wiringinfo.json  VirtualFolding2wiringinfo.json  pom.xml
FIABroscore/: build.gradle
FIABtracing/: pom.xml
FIABturntable/: .gitignore  Turntable1wiringinfo.json  VirtualTurntablewiringinfo.json  build.gradle  dependency-reduced-pom.xml  pom.xml  settings.gradle
FIABturntable/brickConfig/: turnTableConfig.gradle
FIABvirtualplotter/: build.gradle  pom.xml
FiabUml/: .project  FiabUml.notation  FiabUml.uml
MES/: Capabilities.xmi  FoldingTurntable1wiringinfo.json  FoldingTurntable2wiringinfo.json  LocalFoldingProductionCell.json  ProcessTemplate4Plotters.xmi  ProcessTemplateSingleFold.xmi  ProcessTemplateSinglePlotter.xmi  Turntable1wiringinfo-RealIOat34Westand37South.json  Turntable1wiringinfo.json  TurntableVirtualW20toN32toE35wiringinfo.json  TurntableVirtualW34toN31toS37wiringinfo.json  TurntableVirtualW34toS37wiringinfo.json  VirtualFolding1wiringinfo.json  VirtualFoldingwiringinfo.json  VirtualTurntable1wiringinfo.json  VirtualTurntable2wiringinfo.json  VirtualTurntable3wiringinfo.json  VirtualTurntable4wiringinfo.json  build.gradle  foldingonly.json  keystore.json  minimalfolding.json
MES/4Diac/: forte.fboot
MES/FIAB/: .classpath  .gitignore  Capabilities.xmi  MESactors.ipr  ProcessTemplate4Plotters.xmi  ProcessTemplateSinglePlotter.xmi  ShopfloorDiscovery-DualTT.json  ShopfloorDiscovery-SingleTT.json  ShopfloorDiscovery-VirtualSingleTT.json  TestShopfloorParticipantAddresses.json  Turntable1DualTTUpdatedwiringinfo.json  Turntable1DualTTWiringinfo.json  Turntable1TracingTestwiringinfo.json  Turntable1wiringinfo-virtualIOWest34South37-ActualPlotterNorth31.json  Turntable1wiringinfo-virtualOnly.json  Turntable1wiringinfo.json  Turntable2DualTTUpdatedwiringinfo.json  Turntable2DualTTWiringinfo.json  Turntable2wiringinfo.json  TurntableVirtualW34toN31toE21wiringinfo.json  TurntableVirtualW34toN31toS37wiringinfo.json  TurntableVirtualW34toS37Updatedwiringinfo.json  TurntableVirtualW34toS37wiringinfo.json  cred.json  dependency-reduced-pom.xml  keystore.jks  keystore.json  pom.xml  proc1.xmi
docs/: best_practices.md  turntable_implementation.md
fiab_ros_messages/src/ros_basic_machine_msg/: CMakeLists.txt  package.xml
libs/: Dockerfile  docker-compose.yml  entrypoint.sh
stylesheets/: graph.stylesheet
(+1668 files in other folders)
